# QGIS-Palette-Pilot

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: publish-release.yml  release.yml
docs/: architecture.md  debugging.md  development.md  installation.md  release-checklist.md  testing.md
palette_pilot/: LICENSE  __init__.py  metadata.txt  palette_dialog.py  palette_pilot.py  palette_presets.py  qt_compat.py  ramp_preview_widget.py  theme_editor_dialog.py  theme_engine.py
palette_pilot/i18n/: palette_pilot.pro  palette_pilot_en.ts
scripts/: create_release_zip.py  gen_plugin_icons.py  install_plugin_for_dev.py
tests/: README.md  test_palette_presets.py  test_qt_compat.py  test_theme_engine.py
